2019-1/220/users/4389/executions/1833_1647.log
== TEST (2019-06-13 20:11:54) 
-- CODE:
from numpy import*
alunos = array(eval(input("Informe o percentual de aluna frequentado:\n")))
aux = zeros(size(alunos), dtype = int)
cont = 0
j = 0
for(i in range(size(alunos))):
	if (alunos[i]>=70):
		cont = cont + 1
for(i in range size(alunos)):
	if(alunos[i]>=70):
		aux[j] = i
		j = j + 1
		
print(cont)
print(aux)
-- ERROR:
File "XXXX", line 6
    for(i in range(size(alunos))):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 20:12:21) 
-- CODE:
from numpy import*
alunos = array(eval(input("Informe o percentual de aluna frequentado:\n")))
aux = zeros(size(alunos), dtype = int)
cont = 0
j = 0
for(i in range (size(alunos)):
	if (alunos[i]>=70):
		cont = cont + 1
for(i in range size(alunos)):
	if(alunos[i]>=70):
		aux[j] = i
		j = j + 1
		
print(cont)
print(aux)
-- ERROR:
File "XXXX", line 6
    for(i in range (size(alunos)):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 20:12:43) 
-- CODE:
from numpy import*
alunos = array(eval(input("Informe o percentual de aluna frequentado:\n")))
aux = zeros(size(alunos), dtype = int)
cont = 0
j = 0
for(i in range size(alunos):
	if (alunos[i]>=70):
		cont = cont + 1
for(i in range size(alunos)):
	if(alunos[i]>=70):
		aux[j] = i
		j = j + 1
		
print(cont)
print(aux)
-- ERROR:
File "XXXX", line 6
    for(i in range size(alunos):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 20:13:12) 
-- CODE:
from numpy import*
alunos = array(eval(input("Informe o percentual de aluna frequentado:\n")))
aux = zeros(size(alunos), dtype = int)
cont = 0
j = 0
for i in range(size(alunos)):
	if (alunos[i]>=70):
		cont = cont + 1
for i in range (size(alunos)):
	if(alunos[i]>=70):
		aux[j] = i
		j = j + 1
		
print(cont)
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 20:16:15) 
-- CODE:
from numpy import*
alunos = array(eval(input("Informe o percentual de aluna frequentado:\n")))
aux = zeros(size(alunos), dtype = int)
cont = 0
j = 0
for i in range(size(alunos)):
	if (alunos[i]>=70):
		cont = cont + 1
for i in range (size(alunos)):
	if(alunos[i]>=70):
		aux[j] = i
		j = j + 1
		
print(cont)
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 20:17:48) 
-- CODE:
from numpy import*
alunos = array(eval(input("Informe o percentual de aluna frequentado:\n")))
#aux = zeros(size(alunos), dtype = int)
cont = 0
j = 0
for i in range(size(alunos)):
	if (alunos[i]>=70):
		cont = cont + 1
aux = zeros(cont, dtype=int)
for i in range (size(alunos)):
	if(alunos[i]>=70):
		aux[j] = i
		j = j + 1
		
print(cont)
print(aux)
-- EXECUTION TIME:
1.12002
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 3 4 6]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
